example_scan/Pay-As-You-Go-510f92e0/2018-08-23/raw/network_security_groups.json
[
    {
        "defaultSecurityRules": [
            {
                "access": "Allow",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Allow inbound traffic from all VMs in VNET",
                "destinationAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Inbound",
                "etag": "W/\"02594571-e1ce-4df7-b3c7-4d0ba56b33d0\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/kb-may2018-lab/providers/Microsoft.Network/networkSecurityGroups/kb-lab-nsg1/defaultSecurityRules/AllowVnetInBound",
                "name": "AllowVnetInBound",
                "priority": 65000,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "kb-may2018-lab",
                "sourceAddressPrefix": "VirtualNetwork",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Allow",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Allow inbound traffic from azure load balancer",
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Inbound",
                "etag": "W/\"02594571-e1ce-4df7-b3c7-4d0ba56b33d0\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/kb-may2018-lab/providers/Microsoft.Network/networkSecurityGroups/kb-lab-nsg1/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                "name": "AllowAzureLoadBalancerInBound",
                "priority": 65001,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "kb-may2018-lab",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Deny",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Deny all inbound traffic",
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Inbound",
                "etag": "W/\"02594571-e1ce-4df7-b3c7-4d0ba56b33d0\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/kb-may2018-lab/providers/Microsoft.Network/networkSecurityGroups/kb-lab-nsg1/defaultSecurityRules/DenyAllInBound",
                "name": "DenyAllInBound",
                "priority": 65500,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "kb-may2018-lab",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Allow",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "destinationAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Outbound",
                "etag": "W/\"02594571-e1ce-4df7-b3c7-4d0ba56b33d0\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/kb-may2018-lab/providers/Microsoft.Network/networkSecurityGroups/kb-lab-nsg1/defaultSecurityRules/AllowVnetOutBound",
                "name": "AllowVnetOutBound",
                "priority": 65000,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "kb-may2018-lab",
                "sourceAddressPrefix": "VirtualNetwork",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Allow",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Allow outbound traffic from all VMs to Internet",
                "destinationAddressPrefix": "Internet",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Outbound",
                "etag": "W/\"02594571-e1ce-4df7-b3c7-4d0ba56b33d0\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/kb-may2018-lab/providers/Microsoft.Network/networkSecurityGroups/kb-lab-nsg1/defaultSecurityRules/AllowInternetOutBound",
                "name": "AllowInternetOutBound",
                "priority": 65001,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "kb-may2018-lab",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Deny",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Deny all outbound traffic",
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Outbound",
                "etag": "W/\"02594571-e1ce-4df7-b3c7-4d0ba56b33d0\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/kb-may2018-lab/providers/Microsoft.Network/networkSecurityGroups/kb-lab-nsg1/defaultSecurityRules/DenyAllOutBound",
                "name": "DenyAllOutBound",
                "priority": 65500,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "kb-may2018-lab",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            }
        ],
        "etag": "W/\"02594571-e1ce-4df7-b3c7-4d0ba56b33d0\"",
        "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/kb-may2018-lab/providers/Microsoft.Network/networkSecurityGroups/kb-lab-nsg1",
        "location": "southcentralus",
        "name": "kb-lab-nsg1",
        "networkInterfaces": null,
        "provisioningState": "Succeeded",
        "resourceGroup": "kb-may2018-lab",
        "resourceGuid": "6b184cb3-c68b-4973-802b-5426734687f1",
        "securityRules": [],
        "subnets": null,
        "tags": null,
        "type": "Microsoft.Network/networkSecurityGroups"
    },
    {
        "defaultSecurityRules": [
            {
                "access": "Allow",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Allow inbound traffic from all VMs in VNET",
                "destinationAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Inbound",
                "etag": "W/\"334f49d0-87b2-48ce-8422-ce40ed11e1cc\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/AzureBackupRG_westus_1/providers/Microsoft.Network/networkSecurityGroups/cis-alert-test/defaultSecurityRules/AllowVnetInBound",
                "name": "AllowVnetInBound",
                "priority": 65000,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "AzureBackupRG_westus_1",
                "sourceAddressPrefix": "VirtualNetwork",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Allow",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Allow inbound traffic from azure load balancer",
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Inbound",
                "etag": "W/\"334f49d0-87b2-48ce-8422-ce40ed11e1cc\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/AzureBackupRG_westus_1/providers/Microsoft.Network/networkSecurityGroups/cis-alert-test/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                "name": "AllowAzureLoadBalancerInBound",
                "priority": 65001,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "AzureBackupRG_westus_1",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Deny",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Deny all inbound traffic",
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Inbound",
                "etag": "W/\"334f49d0-87b2-48ce-8422-ce40ed11e1cc\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/AzureBackupRG_westus_1/providers/Microsoft.Network/networkSecurityGroups/cis-alert-test/defaultSecurityRules/DenyAllInBound",
                "name": "DenyAllInBound",
                "priority": 65500,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "AzureBackupRG_westus_1",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Allow",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "destinationAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Outbound",
                "etag": "W/\"334f49d0-87b2-48ce-8422-ce40ed11e1cc\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/AzureBackupRG_westus_1/providers/Microsoft.Network/networkSecurityGroups/cis-alert-test/defaultSecurityRules/AllowVnetOutBound",
                "name": "AllowVnetOutBound",
                "priority": 65000,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "AzureBackupRG_westus_1",
                "sourceAddressPrefix": "VirtualNetwork",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Allow",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Allow outbound traffic from all VMs to Internet",
                "destinationAddressPrefix": "Internet",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Outbound",
                "etag": "W/\"334f49d0-87b2-48ce-8422-ce40ed11e1cc\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/AzureBackupRG_westus_1/providers/Microsoft.Network/networkSecurityGroups/cis-alert-test/defaultSecurityRules/AllowInternetOutBound",
                "name": "AllowInternetOutBound",
                "priority": 65001,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "AzureBackupRG_westus_1",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Deny",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Deny all outbound traffic",
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Outbound",
                "etag": "W/\"334f49d0-87b2-48ce-8422-ce40ed11e1cc\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/AzureBackupRG_westus_1/providers/Microsoft.Network/networkSecurityGroups/cis-alert-test/defaultSecurityRules/DenyAllOutBound",
                "name": "DenyAllOutBound",
                "priority": 65500,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "AzureBackupRG_westus_1",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            }
        ],
        "etag": "W/\"334f49d0-87b2-48ce-8422-ce40ed11e1cc\"",
        "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/AzureBackupRG_westus_1/providers/Microsoft.Network/networkSecurityGroups/cis-alert-test",
        "location": "centralus",
        "name": "cis-alert-test",
        "networkInterfaces": null,
        "provisioningState": "Succeeded",
        "resourceGroup": "AzureBackupRG_westus_1",
        "resourceGuid": "9bac097f-3bd7-4d3f-935c-46efb8f07904",
        "securityRules": [],
        "subnets": null,
        "tags": null,
        "type": "Microsoft.Network/networkSecurityGroups"
    },
    {
        "defaultSecurityRules": [
            {
                "access": "Allow",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Allow inbound traffic from all VMs in VNET",
                "destinationAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Inbound",
                "etag": "W/\"6cf4cc98-dacd-445b-9c52-a4ff1776b20b\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/cis_scanner_rg1_2018-05-24/providers/Microsoft.Network/networkSecurityGroups/cistestvm-nsg/defaultSecurityRules/AllowVnetInBound",
                "name": "AllowVnetInBound",
                "priority": 65000,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "cis_scanner_rg1_2018-05-24",
                "sourceAddressPrefix": "VirtualNetwork",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Allow",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Allow inbound traffic from azure load balancer",
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Inbound",
                "etag": "W/\"6cf4cc98-dacd-445b-9c52-a4ff1776b20b\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/cis_scanner_rg1_2018-05-24/providers/Microsoft.Network/networkSecurityGroups/cistestvm-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                "name": "AllowAzureLoadBalancerInBound",
                "priority": 65001,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "cis_scanner_rg1_2018-05-24",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Deny",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Deny all inbound traffic",
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Inbound",
                "etag": "W/\"6cf4cc98-dacd-445b-9c52-a4ff1776b20b\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/cis_scanner_rg1_2018-05-24/providers/Microsoft.Network/networkSecurityGroups/cistestvm-nsg/defaultSecurityRules/DenyAllInBound",
                "name": "DenyAllInBound",
                "priority": 65500,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "cis_scanner_rg1_2018-05-24",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Allow",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "destinationAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Outbound",
                "etag": "W/\"6cf4cc98-dacd-445b-9c52-a4ff1776b20b\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/cis_scanner_rg1_2018-05-24/providers/Microsoft.Network/networkSecurityGroups/cistestvm-nsg/defaultSecurityRules/AllowVnetOutBound",
                "name": "AllowVnetOutBound",
                "priority": 65000,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "cis_scanner_rg1_2018-05-24",
                "sourceAddressPrefix": "VirtualNetwork",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Allow",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Allow outbound traffic from all VMs to Internet",
                "destinationAddressPrefix": "Internet",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Outbound",
                "etag": "W/\"6cf4cc98-dacd-445b-9c52-a4ff1776b20b\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/cis_scanner_rg1_2018-05-24/providers/Microsoft.Network/networkSecurityGroups/cistestvm-nsg/defaultSecurityRules/AllowInternetOutBound",
                "name": "AllowInternetOutBound",
                "priority": 65001,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "cis_scanner_rg1_2018-05-24",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Deny",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
                },
                "description": "Deny all outbound traffic",
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "*",
                "destinationPortRanges": [],
                "direction": "Outbound",
                "etag": "W/\"6cf4cc98-dacd-445b-9c52-a4ff1776b20b\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/cis_scanner_rg1_2018-05-24/providers/Microsoft.Network/networkSecurityGroups/cistestvm-nsg/defaultSecurityRules/DenyAllOutBound",
                "name": "DenyAllOutBound",
                "priority": 65500,
                "protocol": "*",
                "provisioningState": "Succeeded",
                "resourceGroup": "cis_scanner_rg1_2018-05-24",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            }
        ],
        "etag": "W/\"6cf4cc98-dacd-445b-9c52-a4ff1776b20b\"",
        "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/cis_scanner_rg1_2018-05-24/providers/Microsoft.Network/networkSecurityGroups/cistestvm-nsg",
        "location": "centralus",
        "name": "cistestvm-nsg",
        "networkInterfaces": [
            {
                "dnsSettings": null,
                "enableAcceleratedNetworking": null,
                "enableIpForwarding": null,
                "etag": null,
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/cis_scanner_rg1_2018-05-24/providers/Microsoft.Network/networkInterfaces/cistestvm591",
                "ipConfigurations": null,
                "location": null,
                "macAddress": null,
                "name": null,
                "networkSecurityGroup": null,
                "primary": null,
                "provisioningState": null,
                "resourceGroup": "cis_scanner_rg1_2018-05-24",
                "resourceGuid": null,
                "tags": null,
                "type": null,
                "virtualMachine": null
            }
        ],
        "provisioningState": "Succeeded",
        "resourceGroup": "cis_scanner_rg1_2018-05-24",
        "resourceGuid": "16774891-f0e0-4c6e-af7c-41ccc401c0f3",
        "securityRules": [
            {
                "access": "Allow",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/securityRules"
                },
                "description": null,
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "443",
                "destinationPortRanges": [],
                "direction": "Inbound",
                "etag": "W/\"6cf4cc98-dacd-445b-9c52-a4ff1776b20b\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/cis_scanner_rg1_2018-05-24/providers/Microsoft.Network/networkSecurityGroups/cistestvm-nsg/securityRules/HTTPS",
                "name": "HTTPS",
                "priority": 300,
                "protocol": "TCP",
                "provisioningState": "Succeeded",
                "resourceGroup": "cis_scanner_rg1_2018-05-24",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            },
            {
                "access": "Allow",
                "additionalProperties": {
                    "type": "Microsoft.Network/networkSecurityGroups/securityRules"
                },
                "description": null,
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "destinationApplicationSecurityGroups": null,
                "destinationPortRange": "22",
                "destinationPortRanges": [],
                "direction": "Inbound",
                "etag": "W/\"6cf4cc98-dacd-445b-9c52-a4ff1776b20b\"",
                "id": "/subscriptions/510f92e0-3fcf-4b8f-8a23-095d37e6a299/resourceGroups/cis_scanner_rg1_2018-05-24/providers/Microsoft.Network/networkSecurityGroups/cistestvm-nsg/securityRules/SSH",
                "name": "SSH",
                "priority": 320,
                "protocol": "TCP",
                "provisioningState": "Succeeded",
                "resourceGroup": "cis_scanner_rg1_2018-05-24",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "sourceApplicationSecurityGroups": null,
                "sourcePortRange": "*",
                "sourcePortRanges": []
            }
        ],
        "subnets": null,
        "tags": null,
        "type": "Microsoft.Network/networkSecurityGroups"
    }
]
